# 6502-emulator

./: CMakeLists.txt  CMakeLists.txt.in  README.md
sample/: a.o65  draw.asm  draw.s  test.s
src/: machine.cpp  machine.h  main.cpp  memory.cpp  memory.h  program.cpp  program.h  stack.cpp  stack.h  utils.cpp  utils.h
src/instruction/: instruction-executor.cpp  instruction-executor.h
src/machine/: cpu.cpp  cpu.h  keyboard.cpp  keyboard.h  machine.cpp  machine.h  memory.cpp  memory.h  program-counter.cpp  program-counter.h  register.cpp  register.h  stack.cpp  stack.h  status-register.cpp  status-register.h  terminal.cpp  terminal.h
src/opcode/: opcode-handler-directory.cpp  opcode-handler-directory.h  opcode-handler.cpp  opcode-handler.h
src/opcode/handler/: bitwise-opcode-handler-container.cpp  (+39 more)
src/register/: register-manager.cpp  register-manager.h  register.cpp  register.h  status-register.cpp  status-register.h
test/: bitwise-opcode-handler-test.cpp  branch-opcode-handler-test.cpp  compare-opcode-handler-test.cpp  flags-opcode-handler-test.cpp  instruction-executor-test.cpp  jump-opcode-handler-test.cpp  lda-opcode-handler-test.cpp  ldx-opcode-handler-test.cpp  load-opcode-handler-test.cpp  machine-test.cpp  maths-opcode-handler-test.cpp  register-opcode-handler-test.cpp  register-test.cpp  stack-opcode-handler-test.cpp  status-opcode-handler-test.cpp  status-register-test.cpp  store-opcode-handler-test.cpp  stx-opcode-handler-test.cpp  sty-opcode-handler.cpp  system-opcode-handler-test.cpp  test-utils.cpp  test-utils.h  transfer-opcode-handler-test.cpp
